# scikit-learn-mooc

./: pyproject.toml  requirements.txt
notebooks/: 01_tabular_data_exploration.ipynb  01_tabular_data_exploration_ex_01.ipynb  02_numerical_pipeline_cross_validation.ipynb  02_numerical_pipeline_ex_00.ipynb  02_numerical_pipeline_ex_01.ipynb  02_numerical_pipeline_hands_on.ipynb  02_numerical_pipeline_introduction.ipynb  02_numerical_pipeline_scaling.ipynb  03_categorical_pipeline.ipynb
