[project]
name = "scikit-learn-mooc"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.8",
  "pandas>=3",
  "matplotlib>=3.10",
  "seaborn>=0.13",
  "plotly",
  "jupyterlab",
  "notebook",
  "ipython",
]

[project.optional-dependencies]
dev = [
  "jupyter-book<2.0",
  "jupytext",
  "beautifulsoup4",
]

[tool.black]
line-length = 79
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''

[tool.ruff.lint]
ignore = [
    'E402',  # module level import not at top of file
    'F401',  # imported but unused
    'E501',  # line too long
    'E203',  # whitespace before ':'
]
